# eurogames

./: .aider.chat.history.md  .aider.input.history  .gitignore  API_MIGRATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  MIGRATION.md  QUICKSTART.md  README.md  airtable.rkt  analysis.jl  bgg.rkt  games  get-bgg-data.sh  http.rkt  package-lock.json  package.json  project.clj  pyproject.toml  run-app.sh  update-games.rkt  wrangler.toml
.claude/: settings.local.json
data/: add-bgg-game.sh  add-game-csv.sh  add-game.sh  add-result.sh  dedup.sh  get-game-data.sh  list-games.sh  lookup.sh  new-game.sh  update-game-data.sh  update-notes.sh  update-ranking.sh  upsert-game.sh
doc/: intro.md
docs/: API_DEPLOYMENT_CHECKLIST.md  MIGRATION_SUMMARY.md
migration-scripts/: reset-and-migrate.sh
migrations/: 0001_initial_schema.sql  0002_create_views.sql
migrations/data/: bgg.sql  log.sql  notes.sql
scripts/: export-to-d1.js  migrate-to-d1.sh  verify-migration.js
src/analysis/: analysis.jl
src/api/: index.ts  types.ts  utils.ts
src/api-scripts/: list-games.sh  update-game-data.sh  update-notes.sh
src/app/: api_client.py  app.py  eurogames-api.json  main.py
src/cli/: add-result.sh  backup-db.sh  delete-game.sh  games.clj  get-game-data.sh  info.sh  last-played.sh  lookup.sh  output.clj  run-app.sh  show-all.sh  update-ranking.sh
src/eurogames/: core.clj
src/eurogames.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scripts/: add-bgg-game.sh  add-game-csv.sh  add-result.sh  last-played.sh  list-games.sh  lookup.sh  (+4 more)
test/: README.md
(+37 files in other folders)
